# Search_engine

./: .gitignore  Cargo.toml  LICENSE  README.md  discovered_urls.txt  indes.json  index.json  junk_urls.json  seed.txt  seeds.txt  visitable_urls.json  visitable_urls.txt
Documentation/: index.md  userspace-api.md
Documentation/admin-guide/: index.md
Documentation/crawler/: index.md
Documentation/dev-tools/: build.md
Documentation/indexer/: index.md  link_discovery.md
Documentation/searcher/: index.md
Documentation/spyder/: index.md
crates/ab_web/: Cargo.toml
crates/ab_web/src/: ab_client.rs  cache.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  models.rs  scheduler.rs  service.rs  storage.rs  storage_queries.rs
crates/ab_web/static/: app.js  index.html  styles.css
crates/ab_web/tests/: content_models.rs  storage_reader.rs
crates/app/: Cargo.toml
crates/app/src/: config.rs  lib.rs  main.rs  runner.rs
crates/app/tests/: config_env.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: dns_resolver.rs  frontier.rs  lib.rs  robot.rs  seed_loader.rs  url_handler.rs
crates/db/: Cargo.toml
crates/db/src/: config.rs  (+7 more)
crates/indexer/: Cargo.toml  README.md  discovered_urls.txt  visitable_urls.json  visitable_urls.txt
crates/indexer/src/: config.rs  discovery.rs  document.rs  engine.rs  globals.rs  indexing.rs  lib.rs  parser.rs  storage.rs  tf_counter.rs  tokenizer.rs
crates/indexer/src/indexing/: analyzer.rs  pipeline.rs  tf_counter.rs
crates/indexer/src/parser/: html.rs  mod.rs  xml.rs
crates/indexer/src/storage/: engine.rs  schema.rs
crates/indexer/src/storage/schema/: id_generator.rs  schema.rs  utils.rs
crates/indexer/src/tokenizer/: core.rs  link_filter.rs  load_data.rs  mod.rs  normalizer.rs  scanner.rs  utils.rs
crates/indexer/tests/: indexing.rs  link_filter_tests.rs  test_xml_parser.rs  unit_tests.rs  verify_parsed_html_content.rs
crates/searcher/: Cargo.toml
crates/spyder/: Cargo.toml
src/: crawler.rs  helper.rs  lexer.rs  lib.rs  main.rs  main1.rs
src/crawler/: dns.rs  mod.rs  parser.rs  seed_manager.rs
src/engine/: mod.rs
src/indexer/: mod.rs  storage.rs
src/parser/: mod.rs  xml.rs
src/server/: http.rs  mod.rs  tiny_http.rs  utility.rs
(+56 files in other folders)
