[workspace]
members = [
    "crates/spyder",
    "crates/indexer",
    "crates/searcher",
    "crates/app",
    "crates/db",
]
resolver = "2"

[workspace.dependencies]
db = { path = "crates/db" }
indexer = { path = "crates/indexer" }
searcher = { path = "crates/searcher" }
spyder = { path = "crates/spyder" }
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2"
xml = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "tls-rustls"] }
