[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
xml = "1.0"
scraper = "0.18.1"
url = "2"
spyder = { path = "../spyder" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
