[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static.workspace = true
rand.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
spyder.workspace = true
url.workspace = true
xml.workspace = true

[dev-dependencies]
tokio.workspace = true
